--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 Etiam eleifend elit leo, sed pulvinar turpis imperdiet ut.
         </p>
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4593550047050569"
+     crossorigin="anonymous"></script>
 
 
     </body>
